--- a/standard.bib
+++ b/standard.bib
@@ -453,3 +453,13 @@ title = {{Naive Bayes classifiers Generative classifiers}},
 volume = {4701},
 year = {2006}
 }
+
+@INPROCEEDINGS{Ibrahim_Baharudin2016, 
+author={A. M. Ibrahim and B. Baharudin}, 
+booktitle={2016 3rd International Conference on Computer and Information Sciences (ICCOINS)}, 
+title={Classification of mammogram images using shearlet transform and kernel principal component analysis}, 
+year={2016}, 
+pages={340-344}, 
+keywords={feature extraction;image classification;image texture;mammography;medical image processing;principal component analysis;transforms;tumours;KNN classifier;ROI;Shearlet transform;T-value;breast tumor;k-nearest neighbor classifier;kernel princial component analysis;mammogram image classification;region of interest;shearlet-KPCA method;texture feature extraction;Cancer;Computers;Feature extraction;Kernel;Mammography;Principal component analysis;Transforms;classifier;feature extraction;kernel principal component analysis;mammogram;shearlet transform}, 
+doi={10.1109/ICCOINS.2016.7783238}, 
+month={Aug},}
